@@ -3,6 +3,7 @@ Release 1.0.1
 =============
 
 * fix if no templates are found
+* improvements of the smart search
 
 =============
 Release 1.0.0
